--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,4 +1,28 @@
 *	{
 	margin: 0;
 	padding: 0;
+	box-sizing: border-box;
+}
+
+html {
+	font-size: 62.5%;
+}
+
+
+
+a, p {
+	font-family: $fuenteTextos;
+	font-size: 1.6rem;
+}
+
+a {
+	text-decoration: none;
+	&:hover {
+		text-decoration: none;
+
+	}
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: $fuenteTitulos;
 }
