--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -6,7 +6,7 @@
     max-height: 43.2rem;
     overflow: hidden;
 
-    background-image: url('/media/background/FONDO\ CLARO.png');
+    background-image: url('../media/background/FONDO\ CLARO.png');
     background-position: center center;
     background-size: cover;
 
