--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
           justify-content: space-between;
   max-height: 43.2rem;
   overflow: hidden;
-  background-image: url("/media/background/FONDO CLARO.png");
+  background-image: url("../media/background/FONDO CLARO.png");
   background-position: center center;
   background-size: cover;
 }
